--- a/packages/observer/demos/default/index.scss
+++ b/packages/observer/demos/default/index.scss
@@ -10,3 +10,14 @@
   line-height: 10vw;
   margin-bottom: 20px;
 }
+
+.trigger-node {
+  width: 100%;
+  height: 100px;
+  background-color: purple;
+  display: inline-block;
+  text-align: center;
+  color: white;
+  line-height: 100px;
+  margin-bottom: 20px;
+}
