--- a/packages/scroller/demos/default/index.scss
+++ b/packages/scroller/demos/default/index.scss
@@ -17,7 +17,7 @@ section {
   width: 100%;
   display: block;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
