--- a/packages/parallax/demos/default/index.scss
+++ b/packages/parallax/demos/default/index.scss
@@ -1,5 +1,10 @@
 @import "@dorfjungs/scss-base/base/reset";
 
+
+body {
+  background-image: url(bg.png);
+}
+
 .box-wrapper {
   padding: 20%;
 }
@@ -8,14 +13,14 @@
   &.medium {
     width: 300px;
     height: 300px;
-    background-color: green;
+    background-color: #273c75;
   }
 
   &.small {
     width: 150px;
     height: 150px;
     margin-left: 40%;
-    background-color: violet;
+    background-color: #40739e;
   }
 }
 
