--- a/packages/parallax/demos/default/index.scss
+++ b/packages/parallax/demos/default/index.scss
@@ -7,6 +7,7 @@ body {
 
 .box-wrapper {
   padding: 20%;
+  overflow: hidden;
 }
 
 .box {
@@ -21,6 +22,13 @@ body {
     height: 150px;
     margin-left: 40%;
     background-color: #40739e;
+  }
+
+  &.large {
+    width: 400px;
+    height: 400px;
+    background-color: darkgoldenrod;
+    margin-left: 50%
   }
 }
 
