--- a/packages/observer/demos/default/index.scss
+++ b/packages/observer/demos/default/index.scss
@@ -1,23 +1,8 @@
-@import "demo";
-
-.element {
-  width: 100%;
-  height: 10vw;
-  background-color: green;
-  display: inline-block;
-  text-align: center;
-  color: white;
-  line-height: 10vw;
-  margin-bottom: 20px;
-}
-
-.trigger-node {
-  width: 100%;
-  height: 100px;
-  background-color: purple;
-  display: inline-block;
-  text-align: center;
-  color: white;
-  line-height: 100px;
-  margin-bottom: 20px;
+.box {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  left: 30vw;
+  top: 10vw;
+  background: black;
 }
