--- a/packages/parallax/demos/default/index.scss
+++ b/packages/parallax/demos/default/index.scss
@@ -5,6 +5,20 @@ body {
   background-image: url(bg.png);
 }
 
+footer {
+  width: 100%;
+  height: 120vh;
+  background-color: green;
+}
+
+section {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 120vh;
+  background-color: orange;
+}
+
 .box-wrapper {
   padding: 20%;
   overflow: hidden;
