--- a/packages/parallax/demo/index.scss
+++ b/packages/parallax/demo/index.scss
@@ -23,9 +23,6 @@ section {
   background-color: orange;
 }
 
-.footer-wrapper {
-}
-
 .box .image-wrapper {
   width: 100%;
   height: 100%;
@@ -52,6 +49,8 @@ section {
 }
 
 .box {
+  position: relative;
+
   &.medium {
     width: 300px;
     height: 300px;
