--- a/packages/scroller/demo/index.scss
+++ b/packages/scroller/demo/index.scss
@@ -18,14 +18,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-html:not(.scroller-hybrid) {
-  height: 100%;
-
-  body,
-  main {
-    height: 100%;
-  }
-}
+// html:not(.scroller-hybrid) {
+//   height: 100%;
+//
+//   body,
+//   main {
+//     height: 100%;
+//   }
+// }
 
 body::-webkit-scrollbar {
   width: 12px;
